[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "1"
features = ["derive"]
[dependencies.log]
version = "0.4"
[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "json", "parking_lot", "tracing-log"]
[dependencies.tracing]
version = "0.1.40"
features = ["log", "attributes"]