[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["apis"]
apis = ["serde_json", "serde_repr", "url", "uuid", "reqwest"]

[dependencies.serde]
version = "1"
features = ["derive"]
[dependencies.log]
version = "0.4"
[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "json", "parking_lot", "tracing-log"]
[dependencies.tracing]
version = "0.1.40"
features = ["log", "attributes"]
[dependencies.serde_json]
version = "^1.0"
optional = true
[dependencies.serde_repr]
version = "^0.1"
optional = true
[dependencies.url]
version = "^2.5"
optional = true
[dependencies.uuid]
version = "^1.8"
features = ["serde", "v4"]
optional = true
[dependencies.reqwest] 
version = "^0.12"
features = ["json", "multipart"]
optional = true