[package]
name = "penumbra"
version = "0.1.0"
edition = "2021"

[features]
default = ["api-server", "api-client"]
api-server = ["axum", "reqwest", "tower-http", "http"]
api-client = ["axum", "reqwest"]

[dependencies.common]
path = "../common"

[dependencies.penumbra-sdk-view]
git = "https://github.com/penumbra-zone/penumbra"
tag = "v1.4.0"
[dependencies.penumbra-sdk-keys]
git = "https://github.com/penumbra-zone/penumbra"
tag = "v1.4.0"
[dependencies.penumbra-sdk-txhash]
git = "https://github.com/penumbra-zone/penumbra"
tag = "v1.4.0"
[dependencies.penumbra-sdk-proto]
git = "https://github.com/penumbra-zone/penumbra"
tag = "v1.4.0"
features = ["box-grpc"]
[dependencies.penumbra-sdk-asset]
git = "https://github.com/penumbra-zone/penumbra"
tag = "v1.4.0"

[dependencies.penumbra-sdk-transaction]
git = "https://github.com/penumbra-zone/penumbra"
tag = "v1.4.0"

[dependencies.futures]
version = "0.3"

[dependencies.tendermint-rpc]
version = "0.40.3"

[dependencies.tonic]
version = "0.12.3"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.anyhow]
version = "1"

[dependencies.camino]
version = "1"

[dependencies.hex]
version = "0.4"

[dependencies.log]
version = "0.4"

[dependencies.axum]
version = "0.8.4"
optional = true
features = ["macros"]

[dependencies.tower-http]
version = "0.6"
features = ["cors"]
optional = true

[dependencies.http]
version = "1"
optional = true

[dependencies.reqwest] 
version = "^0.12"
features = ["json", "multipart"]
optional = true

[dependencies.sha3]
version = "0.10"

[dev-dependencies.serde_json]
version = "1"

[dev-dependencies.hex]
version = "0.4"