[package]
edition = "2021"
name    = "penumbra-disclosure"
version = "0.1.0"

[lib]
name = "penumbra_disclosure"
path = "src/lib.rs"

[[bin]]
name = "penumbra-disclosure-cli"
path = "src/bin.rs"

[features]
api-client = [ "axum", "reqwest" ]
api-server = [ "axum", "http", "reqwest", "tower-http" ]
cli        = [ "api-client", "api-server", "clap" ]
default    = [ "api-client", "api-server", "cli" ]

[dependencies.common]
path = "../common"

# For Penumbra compatibility info, see https://github.com/penumbra-zone/penumbra/blob/main/COMPATIBILITY.md
[dependencies.penumbra-sdk-view]
git = "https://github.com/penumbra-zone/penumbra"
tag = "v2.0.4"
[dependencies.penumbra-sdk-keys]
git = "https://github.com/penumbra-zone/penumbra"
tag = "v2.0.4"
[dependencies.penumbra-sdk-txhash]
git = "https://github.com/penumbra-zone/penumbra"
tag = "v2.0.4"
[dependencies.penumbra-sdk-proto]
features = [ "box-grpc" ]
git      = "https://github.com/penumbra-zone/penumbra"
tag      = "v2.0.4"
[dependencies.penumbra-sdk-asset]
git = "https://github.com/penumbra-zone/penumbra"
tag = "v2.0.4"

[dependencies.penumbra-sdk-transaction]
git = "https://github.com/penumbra-zone/penumbra"
tag = "v2.0.4"

[dependencies.futures]
version = "0.3"

[dependencies.tendermint-rpc]
version = "0.40.3"

[dependencies.tonic]
version = "0.12.3"

[dependencies.tokio]
features = [ "full" ]
version  = "1"

[dependencies.anyhow]
version = "1"

[dependencies.camino]
version = "1"

[dependencies.hex]
version = "0.4"

[dependencies.log]
version = "0.4"

[dependencies.axum]
features = [ "macros" ]
optional = true
version  = "0.8.4"

[dependencies.tower-http]
features = [ "cors" ]
optional = true
version  = "0.6"

[dependencies.http]
optional = true
version  = "1"

[dependencies.reqwest]
features = [ "json", "multipart" ]
optional = true
version  = "^0.12"

[dependencies.sha3]
version = "0.10"

[dependencies.clap]
features = [ "derive" ]
optional = true
version  = "4"

[dev-dependencies.serde_json]
version = "1"

[dev-dependencies.hex]
version = "0.4"

[dev-dependencies.tower]
features = [ "util" ]
version  = "0.5"

[dev-dependencies.http-body-util]
version = "0.1"
